package NYT.NChunkClient.NProto;

import "yt/core/misc/guid.proto";
import "yt/core/misc/error.proto";
import "yt/ytlib/misc/workload.proto";
import "yt/ytlib/node_tracker_client/node.proto";
import "yt/ytlib/chunk_client/chunk_meta.proto";
import "yt/ytlib/chunk_client/chunk_info.proto";
import "yt/ytlib/chunk_client/chunk_slice.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqStartChunk
{
    required NYT.NProto.TGuid chunk_id = 1;
    required NYT.NProto.TWorkloadDescriptor workload_descriptor = 2;
    optional bool sync_on_close = 3 [default = true];
    optional bool enable_multiplexing = 4 [default = false];
    optional NYT.NProto.TGuid placement_id = 6;
}

message TRspStartChunk
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqFinishChunk
{
    required NYT.NProto.TGuid chunk_id = 1;
    optional TChunkMeta chunk_meta = 2;
    optional int32 block_count = 3;
}

message TRspFinishChunk
{
    required TChunkInfo chunk_info = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqCancelChunk
{
    required NYT.NProto.TGuid chunk_id = 1;
}

message TRspCancelChunk
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqPutBlocks
{
    required NYT.NProto.TGuid chunk_id = 1;
    required int32 first_block_index = 2;
    optional bool populate_cache = 5 [default = false];
    optional bool flush_blocks = 6 [default = false];
}

message TRspPutBlocks
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqSendBlocks
{
    required NYT.NProto.TGuid chunk_id = 1;
    required NYT.NNodeTrackerClient.NProto.TNodeDescriptor target_descriptor = 2;
    required int32 first_block_index = 3;
    required int32 block_count = 4;
}

message TRspSendBlocks
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqFlushBlocks
{
    required NYT.NProto.TGuid chunk_id = 1;
    required int32 block_index = 2;
}

message TRspFlushBlocks
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqGetBlockSet
{
    required NYT.NProto.TGuid chunk_id = 1;
    repeated int32 block_indexes = 2;
    optional NYT.NNodeTrackerClient.NProto.TNodeDescriptor peer_descriptor = 3;
    optional uint64 peer_expiration_time = 4;
    optional bool populate_cache = 5 [default = true];
    required NYT.NProto.TWorkloadDescriptor workload_descriptor = 6;
    optional bool fetch_from_cache = 7 [default = true];
    optional bool fetch_from_disk = 8 [default = true];
}

message TRspGetBlockSet
{
    message TPeerDescriptor
    {
        required int32 block_index = 1;
        repeated NYT.NNodeTrackerClient.NProto.TNodeDescriptor node_descriptors = 2;
    }

    repeated TPeerDescriptor peer_descriptors = 1;
    required bool has_complete_chunk = 3;
    required bool net_throttling = 5;
    required int64 net_queue_size = 6;
    required bool disk_throttling = 7;
    required int64 disk_queue_size = 8;

    // Blocks are returned via attachments and correspond to block_indexes
    // list in the request. Some blocks may be null.
}

////////////////////////////////////////////////////////////////////////////////

message TReqGetBlockRange
{
    required NYT.NProto.TGuid chunk_id = 1;
    required int32 first_block_index = 2;
    required int32 block_count = 3;
    required NYT.NProto.TWorkloadDescriptor workload_descriptor = 4;
    optional bool populate_cache = 5 [default = true];
    optional bool fetch_from_cache = 6 [default = true];
    optional bool fetch_from_disk = 7 [default = true];
}

message TRspGetBlockRange
{
    required bool has_complete_chunk = 1;
    required bool net_throttling = 3;
    required int64 net_queue_size = 4;
    required bool disk_throttling = 5;
    required int64 disk_queue_size = 6;

    // Blocks are returned via attachments and correspond to a prefix of
    // the requested range.
}

////////////////////////////////////////////////////////////////////////////////

message TReqPingSession
{
    required NYT.NProto.TGuid chunk_id = 1;
}

message TRspPingSession
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqGetChunkMeta
{
    required NYT.NProto.TGuid chunk_id = 1;
    repeated int32 extension_tags = 2;
    // If true, then extension_tags are ignored and
    // the whole available meta is returned.
    optional bool all_extension_tags = 3 [default = false];
    optional int32 partition_tag = 4;
    required NYT.NProto.TWorkloadDescriptor workload_descriptor = 5;
}

message TRspGetChunkMeta
{
    required TChunkMeta chunk_meta = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqUpdatePeer
{
    message TBlockId
    {
        required NYT.NProto.TGuid chunk_id = 1;
        required int32 block_index = 2;
    }

    repeated TBlockId block_ids = 1;
    required NYT.NNodeTrackerClient.NProto.TNodeDescriptor peer_descriptor = 2;
    required uint64 peer_expiration_time = 3;
}

////////////////////////////////////////////////////////////////////////////////

message TReqGetTableSamples
{
    message TSampleRequest
    {
        required NYT.NProto.TGuid chunk_id = 1;
        required int32 sample_count = 2;
        optional bytes lower_key = 3;
        optional bytes upper_key = 4;
    }

    repeated TSampleRequest sample_requests = 1;
    repeated string key_columns = 2;
    required int32 max_sample_size = 3;
    required NYT.NProto.TWorkloadDescriptor workload_descriptor = 4;
}

message TRspGetTableSamples
{
    message TSample
    {
        required bytes key = 1;
        required bool incomplete = 2;
        required int64 weight = 3;
    }

    message TChunkSamples
    {
        optional NYT.NProto.TError error = 1;
        // Deprecated = 2;
        repeated TSample samples = 3;
    }

    repeated TChunkSamples sample_responses = 1;
}

////////////////////////////////////////////////////////////////////////////////

// For sorted chunks only.
// Scheduler calls this method to perform sorted merge and join merge.
message TReqGetChunkSlices
{
    // Only chunk_id, lower_limit and upper_limit are used
    repeated TSliceRequest slice_requests = 1;
    repeated string key_columns = 2;
    required int64 slice_data_size = 3;
    // If false, chunks are sliced by row indexes and
    // lower_key and upper_key contains estimated values.
    // If true, chunks are sliced by key,
    // each slice contains the whole key
    required bool slice_by_keys = 4;
    required NYT.NProto.TWorkloadDescriptor workload_descriptor = 5;
}

message TRspGetChunkSlices
{
    message TChunkSlices
    {
        optional NYT.NProto.TError error = 1;
        // Deprecated = 2;
        repeated TChunkSlice chunk_slices = 3;
    }

    repeated TChunkSlices slices = 1;
}

////////////////////////////////////////////////////////////////////////////////
